<resources>
    <string name="cantConnect">@string/cantconnect</string>
    <string name="word_separators">". ,;:!?
()[]*&amp;@{}/&lt;>_+=|\""</string>
    <string name="sentence_separators">.,;:!?</string>
    <string name="alternates_for_d" />
    <string name="alternates_for_r" />
    <string name="alternates_for_t" />
    <string name="alternates_for_z" />
    <string name="alternates_for_l" />
    <string name="alternates_for_g" />
    <string name="phrasespotter_SEARCH_GRAMMAR_RES_NAME">en_us_hg_tuned3_cg_2_5</string>
    <string name="phrasespotter_ACOUSTIC_MODEL_RES_NAME">nn_en_us_mfcc_16k_15_big_250_v4_5_raw</string>
    <string name="phrasespotter_PHRASESPOT_BEAM">20</string>
    <string name="phrasespotter_PHRASESPOT_ABSBEAM">40</string>
    <string name="phrasespotter_PHRASESPOT_AOFFSET">0</string>
    <string name="phrasespotter_PHRASESPOT_DELAY">100</string>
    <string name="client_config_tutorial_enabled">false</string>
    <string name="tutorial_video_uri">http://www.youtube.com/watch?v=RR6XLHFPT2E</string>
    <string name="added_word">%s : Saved</string>
    <string name="alternates_for_a">àáâãäåæ</string>
    <string name="alternates_for_c">ç</string>
    <string name="alternates_for_e">èéêë</string>
    <string name="alternates_for_i">ìíîï</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_o">òóôõöœø</string>
    <string name="alternates_for_s">§ß</string>
    <string name="alternates_for_u">ùúûü</string>
    <string name="alternates_for_y">ýÿ</string>
    <string name="key_i">i</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="label_phone_key">123</string>
    <string name="label_symbol_key">\?123</string>
    <string name="speedtest">Speed Test</string>
    <string name="cancel">Cancel</string>
    <string name="help_using_vlingo_secrets_auto_or_manual">We will insert punctuation automatically, but you can also speak punctuation. For example, when you say “How are you question mark” we will return “How are you?”.</string>
    <string name="next">Next</string>
    <string name="settings_incar_speakshow_msgbodies_summary">Show body of message when new message arrives while Driving mode is on</string>
    <string name="settings_incar_wakeup_summary">"Say 'Hi Galaxy' from Voice talk to automatically wake up Voice talk. Note: this may drain your battery"</string>
    <string name="app_name">Voice command</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string name="car_item_answer_question">Question</string>
    <string name="car_iux_item_tips_instructions">"1) Wait for the tone before speaking.

2) Speak directly in to the phone, unless you're on a high-quality Bluetooth headset.

3) Use the Tap and Speak button on the home screen as a shortcut to say everything you want to do."</string>
    <string name="done">Done</string>
    <string name="english_ime_settings">Voice command keyboard settings</string>
    <string name="help_bluetooth_audio_reqs">For Voice command to play audio through your Bluetooth headset it must support &lt;b>A2DP&lt;/b> and you must have Android OS 2.1 or later.</string>
    <string name="help_bluetooth_crashes">Seeing crashes?</string>
    <string name="help_bluetooth_froyo_bug">If your phone sometimes crashes when you disconnect your Bluetooth headset, it is due to a bug in the Android 2.2 OS on certain phones. If you experience this, you can turn off Bluetooth (in Voice command Settings > Advanced)</string>
    <string name="help_bluetooth_info">Voice command can listen for commands and speak back to you through a Bluetooth headset. This works well on most headsets, but there are a few issues you should be aware of.</string>
    <string name="help_bluetooth_issues">Bluetooth Issues</string>
    <string name="help_bluetooth_need_froyo">To be able to speak to Voice command through your headset you must have Android OS 2.2 (Froyo) or later.</string>
    <string name="help_bluetooth_no_audio">Not hearing audio?</string>
    <string name="help_bluetooth_not_recording">Not recording?</string>
    <string name="help_menu8">About</string>
    <string name="help_setup_keyboard_add_microphone">Add a microphone button to your keyboard.</string>
    <string name="help_setup_keyboard_check">Check &lt;font color=#85bee0>Voice command Keyboard&lt;/font></string>
    <string name="help_setup_keyboard_enable">1) Enable the Voice command Keyboard</string>
    <string name="help_setup_keyboard_open_chooser">Open Keyboard Chooser</string>
    <string name="help_setup_keyboard_open_settings">Open Settings Screen</string>
    <string name="help_setup_keyboard_select">Select &lt;font color=#85bee0>Voice command Keyboard&lt;/font></string>
    <string name="help_setup_keyboard_speak_anywhere">Speak anywhere you can type.</string>
    <string name="help_setup_keyboard_switch">2) Switch to the Voice command Keyboard</string>
    <string name="help_setup_keyboard_tap_below">Tap below to open the keyboard chooser</string>
    <string name="help_setup_keyboard_tap_to_open">"Tap below to open your phone's settings screen"</string>
    <string name="help_using_vlingo_secrets_commands">"You don't need to memorize commands. Voice command understands lots of different words for each feature: \"Send Message, Text, SMS\"...try out whatever makes sense to you."</string>
    <string name="help_using_vlingo_secrets_flexible">Voice command is flexible...</string>
    <string name="help_using_vlingo_secrets_punctuation">Automatic punctuation...</string>
    <string name="help_using_vlingo_secrets_recognition">The more you use Voice command, the more accurately it can recognize your voice. Voice command adapts to you personally over time by learning how you pronounce words and what words and phrases you commonly say.</string>
    <string name="help_using_vlingo_secrets_vlingo_learns">Voice command learns...</string>
    <string name="incar">Voice talk</string>
    <string name="iux_using_vlingo_finish">Finish</string>
    <string name="ok_uc">OK</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="previous">Previous</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="settings_advanced_autopunc_summary">Automatically insert punctuation where appropriate</string>
    <string name="settings_advanced_autopunc_title">Auto-punctuation</string>
    <string name="settings_advanced_BTlisten_summary">Use a connected Bluetooth headset when listening for commands</string>
    <string name="settings_advanced_BTlisten_title">Listen over Bluetooth</string>
    <string name="settings_advanced_useloc_summary">Use your current location to improve accuracy</string>
    <string name="settings_advanced_useloc_title">Use location</string>
    <string name="settings_auto_start_listening_summary">Start listening immediately when Voice command is opened</string>
    <string name="settings_auto_start_listening_title">Auto-start listening</string>
    <string name="settings_autodial_dialogtitle">Auto-dial</string>
    <string name="settings_autodial_summary">Auto-dial behavior</string>
    <string name="settings_autodial_title">Auto-dial</string>
    <string name="settings_general">General</string>
    <string name="settings_incar_autostart_speakerphone_summary">Turn speakerphone on when making a call with Voice talk</string>
    <string name="settings_incar_autostart_speakerphone_title">Auto-start speakerphone</string>
    <string name="settings_incar_BTlanuch_summary">Launch Voice talk whenever a Bluetooth headset is connected</string>
    <string name="settings_incar_BTlaunch_title">Launch on Bluetooth</string>
    <string name="settings_incar_customprompt_summary">What would you like to do?</string>
    <string name="settings_incar_customprompt_title">Customize main prompt</string>
    <string name="settings_incar_homeaddress_summary">Configure your home address</string>
    <string name="settings_incar_homeaddress_title">Home address</string>
    <string name="settings_incar_homescreen">General</string>
    <string name="settings_incar_motion_summary">Configure gestures to make Voice talk start listening</string>
    <string name="settings_incar_motion_title">Motion</string>
    <string name="settings_incar_navigation">Navigation</string>
    <string name="settings_incar_onwhilecharging_summary">Wake up command is only on while your phone is charging</string>
    <string name="settings_incar_onwhilecharging_title">Only on while charging</string>
    <string name="settings_incar_speakprompts_summary">Speaks prompts before listening</string>
    <string name="settings_incar_speakprompts_title">Speak prompts</string>
    <string name="settings_incar_speakshow_msgbodies_title">Show body of message</string>
    <string name="settings_incar_summary">Settings for Voice talk</string>
    <string name="settings_incar_texttospeech">Text to Speech</string>
    <string name="settings_incar_title">Voice talk settings</string>
    <string name="settings_incar_wakeup">Wake up command</string>
    <string name="settings_incar_wakeup_title">Wake up command</string>
    <string name="settings_language_dialogtitle">Language</string>
    <string name="settings_language_summary">Choose an input language</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_profanityfilter_summary">Hide potentially offensive words with asterisks</string>
    <string name="settings_profanityfilter_title">Hide offensive words</string>
    <string name="settings_search_engine_dialogtitle">Choose search engine</string>
    <string name="settings_search_engine_title">Web search engine</string>
    <string name="settings_social_facebook_summary">Click to log in to Facebook</string>
    <string name="settings_social_facebook_title">Facebook</string>
    <string name="settings_social_summary">Facebook and Twitter settings</string>
    <string name="settings_social_title">Social settings</string>
    <string name="settings_social_twitter_summary">Click to log in to Twitter</string>
    <string name="settings_social_twitter_title">Twitter</string>
    <string name="settings_uuid_title">Voice talk unique ID</string>
    <string name="settings_uuid_summary">Voice talk unique ID</string>
    <string name="settings_voice_command_help_summary">Help for Voice command</string>
    <string name="settings_voice_command_help_title">Voice command help</string>
    <string name="settings_voice_talk_help_summary">Help for Voice talk</string>
    <string name="settings_voice_talk_help_title">Voice talk help</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="skip">Skip</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="vlingo_answers_answer">Answer</string>
    <string name="vlingo_answers_confirm_question">This is the question you asked?</string>
    <string name="vlingo_answers_search_google">Search Google</string>
    <string name="vlingo_answers_speak_answer">Speak Answer</string>
    <string name="vlingo_answers_this_is_answer">This is the answer</string>
    <string name="voice_suggestions">Voice suggestions</string>
    <string name="voice_suggestions_summary">Display alternate choices when tapping on a word</string>
    <string name="settings_launch_voicetalk_summary">Launch Voice talk by double pressing the home key</string>
    <string name="settings_launch_voicetalk_title">Launch Voice talk</string>
</resources>