<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/english_ime_settings" android:key="english_ime_settings"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:persistent="true" android:title="@string/vibrate_on_keypress" android:key="vibrate_on" />
    <CheckBoxPreference android:persistent="true" android:title="@string/sound_on_keypress" android:key="sound_on" />
    <CheckBoxPreference android:persistent="true" android:title="@string/auto_cap" android:key="auto_cap" android:defaultValue="true" />
    <PreferenceCategory android:title="@string/prediction_category" android:key="prediction_settings">
        <CheckBoxPreference android:persistent="true" android:title="@string/quick_fixes" android:key="quick_fixes" android:summary="@string/quick_fixes_summary" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/show_suggestions" android:key="show_suggestions" android:summary="@string/show_suggestions_summary" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/voice_suggestions" android:key="NBEST" android:summary="@string/voice_suggestions_summary" android:dependency="show_suggestions" android:defaultValue="true" />
        <CheckBoxPreference android:persistent="true" android:title="@string/auto_complete" android:key="auto_complete" android:summary="@string/auto_complete_summary" android:dependency="show_suggestions" android:defaultValue="@bool/enable_autocorrect" />
    </PreferenceCategory>
</PreferenceScreen>
