<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:paddingTop="15.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/ImageView01" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/sym_keyboard_speak" />
            <TextView android:gravity="center_vertical" android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_setup_keyboard_add_microphone" android:layout_toRightOf="@id/ImageView01" android:layout_below="@id/TextView01" />
            <TextView android:gravity="center_vertical" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_setup_keyboard_speak_anywhere" android:layout_toRightOf="@id/ImageView01" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/sep_background_gradient" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginBottom="15.0dip" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginBottom="15.0dip" android:text="@string/help_setup_keyboard_enable" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="24.0dip" android:layout_marginRight="20.0dip"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_setup_keyboard_tap_to_open" />
            <TextView android:id="@id/example_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/help_setup_keyboard_check" />
            <Button android:id="@id/button_open_settings" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="150.0dip" android:text="@string/help_setup_keyboard_open_settings" android:drawableLeft="@drawable/ic_settings_language" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:background="@drawable/sep_background_gradient" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="15.0dip" />
        <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="#ffffffff" android:gravity="center_vertical" android:id="@id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/help_setup_keyboard_switch" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="24.0dip" android:layout_marginRight="20.0dip"
          xmlns:android="http://schemas.android.com/apk/res/android">
            <TextView android:id="@id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/help_setup_keyboard_tap_below" />
            <TextView android:id="@id/example_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/help_setup_keyboard_select" />
            <Button android:id="@id/button_change_keyboard" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minWidth="200.0dip" android:text="@string/help_setup_keyboard_open_chooser" android:drawableLeft="@drawable/ic_keyboard_chooser" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
