<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/btn_container" android:background="@drawable/iux_nav_bar_background" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/next" android:layout_width="1.0dip" android:layout_height="wrap_content" android:layout_marginRight="4.0dip" android:text="@string/next" android:layout_weight="1.0" />
        <Button android:id="@id/skip" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/skip" android:layout_weight="1.0" />
    </LinearLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_margin="10.0dip" android:layout_above="@id/btn_container">
        <TextView android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/welcome_body" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/car_iux_item_tips_instructions" />
    </ScrollView>
</RelativeLayout>
