<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/parent_container" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="right" android:id="@id/done_btn_container" android:background="@drawable/iux_nav_bar_background" android:padding="5.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
        <Button android:id="@id/previous" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/previous" android:layout_weight="1.0" />
        <Button android:id="@id/car_done_btn" android:visibility="gone" android:layout_width="1.0dip" android:layout_height="wrap_content" android:text="@string/done" android:layout_weight="1.0" />
        <Button android:id="@id/done_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="120.0dip" android:text="@string/iux_using_vlingo_finish" android:drawableRight="@drawable/next_button" />
    </LinearLayout>
    <ListView android:id="@id/wycs_top_list" android:layout_width="fill_parent" android:layout_height="fill_parent" android:cacheColorHint="#00000000" android:divider="@android:color/transparent" android:dividerHeight="0.0px" android:layout_above="@id/done_btn_container" android:layout_alignParentTop="true" />
</RelativeLayout>
